# metal_slug_cpp

./: .gitmodules  CMakeLists.txt  README.md
data/: scene1-ground.txt
include/: my_class.hpp
include/factory/: enemy_factory_class.hpp
include/personages/: attack_behavior_interface.hpp  enemy_class.hpp  player_class.hpp  soldier_class.hpp
include/sdl/: graphics.hpp
include/strategy/: attack_behavior_interface.hpp  soldier_class.hpp
src/: main.cpp  my_class.cpp
src/composite/: game_element_set.cpp  game_element_set.h  i_game_element.h
src/event_drivers/: default_driver.cpp  default_driver.h  i_event_driver.h  network_driver.cpp  network_driver.h
src/movement_driver/: i_movement_driver.h  movement_driver.h
src/objects/: base_object.cpp  base_object.h
src/personages/: attack_behavior_interface.cpp  player_class.cpp  soldier_class.cpp
src/player_rects/: clark_rects.cpp  clark_rects.h  i_player_rects.h
src/scenario/: i_scenario.h  scenario.cpp  scenario.h  scene_rects.cpp  scene_rects.h
src/sdl/: graphics.cpp
src/strategy/: attack_behavior_interface.cpp  i_attack_behavior.cpp  i_attack_behavior.h  player_class.cpp  player_class.h  soldier_class.cpp  soldier_class.h
src/utils/: util.cpp  util.h
